--- a/svelte-app/public/global.css
+++ b/svelte-app/public/global.css
@@ -82,3 +82,11 @@ path.leaflet-interactive:focus {
 .leaflet-control-attribution {
 	display: none;
 }
+
+.project-label{
+	font-weight: bold;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	margin-bottom: 5px;
+	color: green;
+	text-align: center;
+}
